# remy-pizza-place

./: Dockerfile  README.md  docker-compose.yml
pizza_stage1/: CMakeLists.txt  package.xml
pizza_stage1/launch/: bringup.launch
pizza_stage1/src/: stage1.cpp
simulation_bringup/: CMakeLists.txt  Dockerfile  package.xml
simulation_bringup/config/: default.rviz  default_controllers.yaml  franka_control_node.yaml
simulation_bringup/launch/: bringup.launch
simulation_bringup/models/pizza_box/: model.config  model.sdf
simulation_bringup/models/table/: model.sdf
simulation_bringup/worlds/: assembly_line.world
